# testICP

./: CMakeLists.txt  README.md
app/: test_optimize_icp_node.cpp
config/: config.yaml
data/: cloud-87.pcd  cloud-89.pcd  cloud-91.pcd
src/: cloud_data.h  icp_registration.cpp  icp_registration.hpp  icp_svd_registration.cpp  icp_svd_registration.hpp  ndt_registration.cpp  ndt_registration.hpp  opt_ICP_CERES.cpp  opt_ICP_CERES.h  opt_ICP_G2O.cpp  opt_ICP_G2O.h  opt_ICP_GN.cpp  opt_ICP_GN.h  registration_interface.hpp
src/lidarOptimization/: lidarCeres.cpp  lidarCeres.h
src/ndt_cpu/: NormalDistributionsTransform.cpp  NormalDistributionsTransform.h  Octree.cpp  Registration.cpp  VoxelGrid.cpp  VoxelGrid.h  ndt_cpu_registration.cpp  ndt_cpu_registration.hpp
src/sicp/: ICP.h  scip_registration.hpp  sicp_registration.cpp
